[project]
name = "pli"
dynamic = ["version"]
description = "Ping's Development Toolkit"
authors = [{ name = "Ping Lin", email = "pingli88@gmail.com" }]
dependencies = ["typer[all]>=0.6.1"]
requires-python = ">=3.9"
license = { text = "MIT" }

[project.optional-dependencies]

[project.scripts]
pli = "pli.__main__:app"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
version = { source = "scm" }

[tool.pdm.build]
package-dir = "src"

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}#egg=pli",
]
test = ["pytest>=7.1.2"]
